# dspnote

./: .gitignore  pyproject.toml  readme.md  setup.py
dspnote/: __init__.py  __main__.py  article.py  figure.py  project.py  server.py
example/: config.yml
example/content/: exampleNote.md
example/static/: dspnote.css  dspnote.js  shaderfig.js  sporthal.js  sporthdiagram.js  sporthparams.js
example/templates/: article.jinja
